--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "sass": "^1.32.12"
+  },
   "author": "Salvador Recuero",
   "license": "ISC"
 }
