--- a/package.json
+++ b/package.json
@@ -1,46 +1,13 @@
 {
-  "name": "meli-frontend-test-client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "qs": "^6.10.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
-  },
+  "name": "meli-frontend-test",
+  "version": "1.0.0",
+  "description": "Mercado Libre frontend practical test.",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {
-    "sass": "^1.32.12"
+    "start": "npm run dev",
+    "start-server": "cd ./server/ && npm run start",
+    "start-client": "cd ./client && npm run start",
+    "dev": "(start npm run start-server && start npm run start-client) || (npm run start-server && npm run start-client)",
+    "postinstall": "(cd ./server && npm install) & (cd ../client && npm install)"
   },
   "author": "Salvador Recuero",
   "license": "ISC"
