Seems it had an error with new? JS things.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start-server": "cd ./server/ && npm run start",
     "start-client": "cd ./client && npm run start",
     "dev": "(start npm run start-server && start npm run start-client) || (npm run start-server && npm run start-client)",
-    "postinstall": "(cd ./server && npm install) & (cd ../client && npm install)"
+    "postinstall": "(cd ./server && npm install) & (cd ../client && npm install)",
+    "build": "npm run build"
   },
   "author": "Salvador Recuero",
   "license": "ISC"
